Share links fixed

--- a/views/partials/share.ejs
+++ b/views/partials/share.ejs
@@ -1,5 +1,7 @@
 <div class="share-buttons">
-    <a href="https://www.addtoany.com/add_to/email?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill="#282E3D"
@@ -7,7 +9,9 @@
             /></svg
     ></a>
 
-    <a href="https://www.addtoany.com/add_to/whatsapp?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill-rule="evenodd"
@@ -17,7 +21,9 @@
             /></svg
     ></a>
 
-    <a href="https://www.addtoany.com/add_to/facebook_messenger?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/facebook_messenger?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill="#282E3D"
@@ -25,7 +31,9 @@
             /></svg
     ></a>
 
-    <a href="https://www.addtoany.com/add_to/telegram?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill="#282E3D"
@@ -33,7 +41,9 @@
             /></svg
     ></a>
 
-    <a href="https://www.addtoany.com/add_to/twitter?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill="#282E3D"
@@ -41,19 +51,13 @@
             /></svg
     ></a>
 
-    <a href="https://www.addtoany.com/add_to/facebook?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
+    <a
+        href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fnode-poll-bt.herokuapp.com%2Fpoll%2F<%= poll.id %>&amp;linkname="
+        target="_blank"
         ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
             <path
                 fill="#282E3D"
                 d="M17.78 27.5V17.008h3.522l.527-4.09h-4.05v-2.61c0-1.182.33-1.99 2.023-1.99h2.166V4.66c-.375-.05-1.66-.16-3.155-.16-3.123 0-5.26 1.905-5.26 5.405v3.016h-3.53v4.09h3.53V27.5h4.223z"
-            /></svg
-    ></a>
-
-    <a href="https://www.addtoany.com/add_to/reddit?linkurl=localhost%3A5000&amp;linkname=" target="_blank"
-        ><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32">
-            <path
-                d="M28.543 15.774a2.953 2.953 0 0 0-2.951-2.949 2.882 2.882 0 0 0-1.9.713 14.075 14.075 0 0 0-6.85-2.044l1.38-4.349 3.768.884a2.452 2.452 0 1 0 .24-1.176l-4.274-1a.6.6 0 0 0-.709.4l-1.659 5.224a14.314 14.314 0 0 0-7.316 2.029 2.908 2.908 0 0 0-1.872-.681 2.942 2.942 0 0 0-1.618 5.4 5.109 5.109 0 0 0-.062.765c0 4.158 5.037 7.541 11.229 7.541s11.22-3.383 11.22-7.541a5.2 5.2 0 0 0-.053-.706 2.963 2.963 0 0 0 1.427-2.51zm-18.008 1.88a1.753 1.753 0 0 1 1.73-1.74 1.73 1.73 0 0 1 1.709 1.74 1.709 1.709 0 0 1-1.709 1.711 1.733 1.733 0 0 1-1.73-1.711zm9.565 4.968a5.573 5.573 0 0 1-4.081 1.272h-.032a5.576 5.576 0 0 1-4.087-1.272.6.6 0 0 1 .844-.854 4.5 4.5 0 0 0 3.238.927h.032a4.5 4.5 0 0 0 3.237-.927.6.6 0 1 1 .844.854zm-.331-3.256a1.726 1.726 0 1 1 1.709-1.712 1.717 1.717 0 0 1-1.712 1.712z"
-                fill="#282E3D"
             /></svg
     ></a>
 </div>
