--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -9,5 +9,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="/css/style.css" />
+        <link rel="icon" type="image/png" href="/img/icon.png" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-status-bar-style" content="#282e3d" />
+        <link rel="apple-touch-icon" href="/img/icon.png" />
     </head>
 </html>
