Fixed widths without css

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -20,7 +20,7 @@
                                 0 %> stem(men)
                             </p>
                         </div>
-                        <svg class="result-bar">
+                        <svg height="32" class="result-bar">
                             <rect
                                 width="<%= poll.votes.filter(x => x === answerName).length / poll.votes.length * 100 %>%"
                                 height="32"
